namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ppprp1
  labels:
    istio-injection: enabled
