external_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: worldtimeapi
  namespace: ppprp1
spec:
  hosts:
  - "worldtimeapi.org"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
